hphp/hack/test/typecheck/variadics/ellipsis_class_method.php
<?hh // strict

function foo(mixed ...$_): void {}

class MyClass {
  public function foo2(...): void {}
}
